# DePaso

./: .gitignore  ARQUITECTURA.md  ARQUITECTURA_DIAGRAMAS.md  AUDITORIA_BACKEND.md  CLAUDE.md  MEJORAS_DISRUPTIVAS.md  MODALIDADES.md  ORGANIZACION_CODIGO.md  ORGANIZATIONS_API_CONTRACT.md  PLAN_MAESTRO.md  PROYECTO.txt  README.md  TODO_COMPLETO.md  TODO_RIDER_SHIPPER_FLUJOS.md  docker-compose.yml  estadoarte.txt  proy.txt  render.yaml  skills-lock.json  start.bat  start.sh
depaso_rest/: .dockerignore  .env.example  .gitignore  CASOS_DE_USO_TESTS.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
depaso_rest/alembic/: env.py  script.py.mako
depaso_rest/alembic/versions/: 001_add_description_to_shipments.py  001_initial_schema.py  002_organizations.py  003_payment_status.py  004_recipient_contact.py  005_declared_value.py
depaso_rest/docs/: README.md
depaso_rest/ml/: COLAB_QUICKSTART.md  GUIA_IA.md  TODO_MARTINA.md  evaluate_bias.py  requirements-ml.txt  train_classifier.py
depaso_rest/ml/dataset/: annotate_bias.py  build_dataset.py  download_open_images.py  make_splits.py
depaso_rest/ml/models/: metadata.json
depaso_rest/ml/notebooks/: 01_dataset.ipynb  02_entrenamiento.ipynb  03_evaluacion.ipynb
depaso_rest/scripts/: run_dev.sh  seed_db.py  seed_demo.py  smoke_test.py
depaso_rest/src/app/: main.py
depaso_rest/src/app/api/: router.py
depaso_rest/src/app/common/: exceptions.py  responses.py
depaso_rest/tests/: conftest.py  test_admin_organizations.py  test_auth.py  test_co2.py  test_geo.py  test_integration_flows.py  test_matching.py  test_organizations.py  test_pricing.py  test_quote_tiers.py  test_routes.py  test_tracking.py  test_vision.py
(+376 files in other folders)
